feat: back to old colors

--- a/september/index.html
+++ b/september/index.html
@@ -20,15 +20,15 @@
         :root {
             --color-background: #ddb1ca;
             --color-titles: #4e5e52;
-            --color-accent: #4e5e52;
-            --color-text: #121313;
+            --color-accent: #A88B6A;
+            --color-text: #594F44;
             --color-white: #FFFFFF;
         }
 
         body {
             background-color: var(--color-background);
             font-family: 'Lato', sans-serif;
-            color: var(--color-text);
+            color: #594F44;
         }
 
         h1,
@@ -41,11 +41,11 @@
 
 
         .bg-primary {
-            background-color: var(--color-background);
+            background-color: #FDFBF7;
         }
 
         .bg-secondary {
-            background-color: var(--color-background);
+            background-color: #EAE0D5;
         }
 
         .text-accent {
