--- a/september/index.html
+++ b/september/index.html
@@ -195,8 +195,7 @@
                         <p class="font-semibold font-serif">Sobota, 27 września 2025, 13:00</p>
                         <p class="mt-2 font-serif">Kościół św. Michała Archanioła</p>
                         <p class="text-sm font-serif">ul. Bolesława Krzywoustego 1, Gliwice</p>
-                        <a href="https://www.google.com/maps/place/Ko%C5%9Bci%C3%B3%C5%82+Rzymskokatolicki+pw.+%C5%9Bw.+Micha%C5%82a+Archanio%C5%82a/@50.297431,18.675544,15z/data=!4m6!3m5!1s0x471130541918453b:0x5f0f3b4053f31745!8m2!3d50.297431!4d18.675544!16s%2Fg%2F1tdy16_9?hl=pl-PL&entry=ttu"
-                            target="_blank"
+                        <a href="https://maps.app.goo.gl/wkSXCZ9pHSrbvGKW9" target="_blank"
                             class="inline-block mt-4 bg-accent text-white px-6 py-2 rounded-full text-sm hover:bg-opacity-90 transition font-display">Wskaż
                             Drogę</a>
                     </div>
@@ -206,8 +205,7 @@
                         <p class="font-semibold font-serif">14:30 - 05:00</p>
                         <p class="mt-2 font-serif">Restauracja Umami</p>
                         <p class="text-sm font-serif">ul. gen. Władysława Sikorskiego 46, Pyskowice</p>
-                        <a href="https://www.google.com/maps/place/Umami/@50.39235,18.62319,15z/data=!4m6!3m5!1s0x4711463132d73315:0x892a7f5a43586221!8m2!3d50.39235!4d18.62319!16s%2Fg%2F11b6dr72b2?hl=pl-PL&entry=ttu"
-                            target="_blank"
+                        <a href="https://maps.app.goo.gl/WYwFfXf2uiQizt5J9" target="_blank"
                             class="inline-block mt-4 bg-accent text-white px-6 py-2 rounded-full text-sm hover:bg-opacity-90 transition font-display">Wskaż
                             Drogę</a>
                     </div>
@@ -228,7 +226,18 @@
                 <div class="relative max-w-4xl mx-auto">
                     <div class="absolute left-4 md:left-1/2 top-0 h-full w-0.5 bg-accent/30"></div>
                     <div class="space-y-12">
-
+                        <div class="relative flex items-center md:justify-end">
+                            <div class="w-full md:w-1/2 md:pr-12">
+                                <div class="p-6 rounded-lg bg-primary shadow-md card">
+                                    <p class="font-bold text-accent font-display text-lg">13:00</p>
+                                    <h4 class="font-display text-xl mt-1">Ceremonia zaślubin</h4>
+                                    <p class="text-sm font-serif mt-1">Najpierw "tak", potem tańce</p>
+                                </div>
+                            </div>
+                            <div
+                                class="timeline-item left absolute top-1/2 -translate-y-1/2 md:left-1/2 md:-translate-x-1/2">
+                            </div>
+                        </div>
                         <div class="relative flex items-center md:justify-end">
                             <div class="w-full md:w-1/2 md:pr-12">
                                 <div class="p-6 rounded-lg bg-primary shadow-md card">
@@ -273,7 +282,7 @@
                                 <div class="p-6 rounded-lg bg-primary shadow-md card">
                                     <p class="font-bold text-accent font-display text-lg">16:45</p>
                                     <h4 class="font-display text-xl mt-1">Tort Weselny</h4>
-                                    <p class="text-sm font-serif mt-1">Najsłodszy moment wieczoru.</p>
+                                    <p class="text-sm font-serif mt-1">Chwila zapomnienia(o diecie).</p>
                                 </div>
                             </div>
                             <div
@@ -325,7 +334,8 @@
                         <div class="info-content hidden mt-4 text-sm font-serif space-y-2">
                             <p>Zapewniamy transport autokarem spod kościoła do restauracji. Po weselu również odwieziemy
                                 Was bezpiecznie do domów na terenie Śląska.</p>
-                            <p>Dla zmotoryzowanych gości dostępne są bezpłatne parkingi zarówno przy kościele, jak i
+                            <p>Nie mniej dla tych z was co wybierają auto dostępne są bezpłatne parkingi zarówno przy
+                                kościele, jak i
                                 przy sali weselnej.</p>
                         </div>
                     </div>
@@ -334,7 +344,8 @@
                             <span class="text-3xl mr-4 text-accent">⚜️</span> Dress Code
                         </h3>
                         <div class="info-content hidden mt-4 text-sm font-serif space-y-2">
-                            <p>Jak się ubrać? Elegancko, ale na luzie! Panowie, krawaty mile widziane (muszki zostawcie
+                            <p>Jak się ubrać? Jak tylko chcecie, byle z klasą! Panowie, krawaty mile widziane (muszkę
+                                zostawcie
                                 Panu Młodemu!). Panie, prosimy o ominięcie bieli i czerni – niech ten dzień będzie pełen
                                 kolorów!</p>
                         </div>
@@ -344,9 +355,10 @@
                             <span class="text-3xl mr-4 text-accent">🌿</span> Diety i Alergie
                         </h3>
                         <div class="info-content hidden mt-4 text-sm font-serif space-y-2">
-                            <p>Wasz komfort kulinarny jest dla nas bardzo ważny. Prosimy, poinformujcie nas o wszelkich
-                                alergiach lub specjalnych potrzebach dietetycznych podczas potwierdzania przybycia.</p>
-                            <p>Możemy przygotować dania w opcji: wegańskiej, bezglutenowej oraz bezlaktozowej.</p>
+                            <p>Diety i alergie? Żaden problem! Po prostu dajcie nam znać, jeśli macie specjalne
+                                potrzeby. </p>
+                            <p>Szef kuchni jest gotów na: wegańskie, bezglutenowe i bezlaktozowe wyzwania.</p>
+
                         </div>
                     </div>
                     <div class="info-card card p-6 rounded-lg cursor-pointer">
@@ -356,8 +368,7 @@
                         <div class="info-content hidden mt-4 text-sm font-serif space-y-2">
                             <p>Kto pyta, nie błądzi... ale w dniu ślubu pytajcie świadka! My pewnie będziemy mieć głowę
                                 w chmurach.</p>
-                            <p><strong>Świadek:</strong> [Imię Świadka], tel: [Numer telefonu Świadka]</p>
-                            <p><strong>Para Młoda:</strong> [Numer telefonu Pary Młodej] (tylko w sytuacjach awaryjnych)
+                            <p><strong>Świadek:</strong> Piotrek Stawecki, tel: []</p>
                             </p>
                         </div>
                     </div>
@@ -366,7 +377,7 @@
                             <span class="text-3xl mr-4 text-accent">☗</span> Nocleg
                         </h3>
                         <div class="info-content hidden mt-4 text-sm font-serif space-y-2">
-                            <p>Nie przewidujemy zorganizowanego noclegu. Zamiast tego zapewniamy komfortowy transport
+                            <p>Nie przewidujemy organizowania noclegu. Zamiast tego zapewniamy komfortowy transport
                                 powrotny dla wszystkich gości, który odwiezie Was do domów na terenie Śląska po
                                 zakończeniu wesela.</p>
                         </div>
