--- a/september/index.html
+++ b/september/index.html
@@ -220,7 +220,8 @@
                     <div class="text-6xl my-8 animate-pulse text-accent">💍</div>
                     <p class="mt-4 max-w-2xl mx-auto text-lg font-serif">Przed Wami rozkład jazdy naszej imprezy!
                         Chcemy, żebyście bawili się na maksa, więc łapcie mały przewodnik po tym, co dla Was
-                        zaplanowaliśmy :P Gotowi? Bo my bardzo!</p>
+                        zaplanowaliśmy :P</p>
+                    <p class="mt-4 max-w-2xl mx-auto text-lg font-serif"> Gotowi? Bo my bardzo!</p>
                 </div>
 
                 <div class="relative max-w-4xl mx-auto">
