--- a/september/index.html
+++ b/september/index.html
@@ -232,7 +232,7 @@
                                 <div class="p-6 rounded-lg bg-primary shadow-md card">
                                     <p class="font-bold text-accent font-display text-lg">13:00</p>
                                     <h4 class="font-display text-xl mt-1">Ceremonia zaślubin</h4>
-                                    <p class="text-sm font-serif mt-1">Najpierw "tak", potem tańce</p>
+                                    <p class="text-sm font-serif mt-1">Najpierw "tak", potem tańce.</p>
                                 </div>
                             </div>
                             <div
@@ -283,7 +283,7 @@
                                 <div class="p-6 rounded-lg bg-primary shadow-md card">
                                     <p class="font-bold text-accent font-display text-lg">16:45</p>
                                     <h4 class="font-display text-xl mt-1">Tort Weselny</h4>
-                                    <p class="text-sm font-serif mt-1">Chwila zapomnienia(o diecie).</p>
+                                    <p class="text-sm font-serif mt-1">Chwila zapomnienia (o diecie).</p>
                                 </div>
                             </div>
                             <div
@@ -335,7 +335,7 @@
                         <div class="info-content hidden mt-4 text-sm font-serif space-y-2">
                             <p>Zapewniamy transport autokarem spod kościoła do restauracji. Po weselu również odwieziemy
                                 Was bezpiecznie do domów na terenie Śląska.</p>
-                            <p>Nie mniej dla tych z was co wybierają auto dostępne są bezpłatne parkingi zarówno przy
+                            <p>Nie mniej dla tych z was, co wybierają auto dostępne są bezpłatne parkingi zarówno przy
                                 kościele, jak i
                                 przy sali weselnej.</p>
                         </div>
@@ -347,7 +347,8 @@
                         <div class="info-content hidden mt-4 text-sm font-serif space-y-2">
                             <p>Jak się ubrać? Jak tylko chcecie, byle z klasą! Panowie, krawaty mile widziane (muszkę
                                 zostawcie
-                                Panu Młodemu!). Panie, prosimy o ominięcie bieli i czerni – niech ten dzień będzie pełen
+                                Panu Młodemu!).</p>
+                            <p>Panie, prosimy o ominięcie bieli i czerni – niech ten dzień będzie pełen
                                 kolorów!</p>
                         </div>
                     </div>
