feat: swiadek update

--- a/september/index.html
+++ b/september/index.html
@@ -370,7 +370,7 @@
                         <div class="info-content hidden mt-4 text-sm font-serif space-y-2">
                             <p>Kto pyta, nie błądzi... ale w dniu ślubu pytajcie świadka! My pewnie będziemy mieć głowę
                                 w chmurach.</p>
-                            <p><strong>Świadek:</strong> Piotrek Stawecki, tel: []</p>
+                            <p><strong>Świadek:</strong> Piotrek Stawecki, tel: 605440708 </p>
                             </p>
                         </div>
                     </div>
